src/objects/sdfs__FormulaShare_Setup_DML__e.object
<CustomObject>
    <fields>
        <fullName>sdfs__CMDT_Record_Name__c</fullName>
        <label>CMDT Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Error__c</fullName>
        <label>Error</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sdfs__Operation__c</fullName>
        <description>&quot;Create&quot; or &quot;Update&quot;</description>
        <label>Operation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Successful__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Successful</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sdfs__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FormulaShare Setup DML</label>
    <pluralLabel>FormulaShare Setup DMLs</pluralLabel>
</CustomObject>